samples/_failures_safe/1761128789_60c7cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28c2c7bf.c: In function ‘main’:
./samples/SAFE/__tmp_28c2c7bf.c:143:5: error: expected expression at end of input
  143 |     size_t compressed_size = perform_compression(&params, input_buffer, input_len, output_buffer, sizeof
      |     ^~~~~~
./samples/SAFE/__tmp_28c2c7bf.c:143:5: error: expected declaration or statement at end of input
